@@ -6,13 +6,15 @@ import java.util.List;
 public class TableIndexInfo extends Object
 {
   String table;
+  String tableSchema;
   String ixName;
   List<IndexColInfo> cols;
   boolean unique;
 
-   public TableIndexInfo(String table, String ixName, List<IndexColInfo> cols, boolean unique)
+   public TableIndexInfo(String table, String tableSchema, String ixName, List<IndexColInfo> cols, boolean unique)
    {
       this.table = table;
+      this.tableSchema = tableSchema;
       this.ixName = ixName;
       this.cols = cols;
       this.unique = unique;
